# dicemaiden-rs

./: .gitignore  .rubocop_todo.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  docker-compose.yml  env.example  roll_syntax.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust-clippy.yml  rust.yml  super-linter.yml
doc/: CHANGELOG  CHANGELOG.md  terms_of_service.md
src/: database.rs  help_text.rs  lib.rs  main.rs
src/commands/: help.rs  mod.rs  purge.rs  roll.rs
src/dice/: aliases.rs  mod.rs  parser.rs  rng.rs  roller.rs
tests/: dice_tests.rs  dice_tests.rs.old  dice_tests_v2.rs  game_systems_tests.rs  integration_tests.rs  performance_tests.rs  unit_tests.rs
tools/: dice_maiden_quota.rb  topgg.rb
