[package]
name = "dicemaiden-rs"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "dicemaiden-rs"
path = "src/main.rs"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "standard_framework",
    "builder",
] }
tokio = { version = "1.21.2", features = ["full","signal"] }
rand = "0.8"
regex = "1.10"
nom = "7.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive", "env"] }
dotenv = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.35"
once_cell = "1.19"
