[package]
name = "dicemaiden-rs"
version = "1.5.0"
edition = "2024"
rust-version = "1.87.0"
keywords = ["discord", "bot", "dice", "rpg", "tabletop"]

[[bin]]
name = "dicemaiden-rs"
path = "src/main.rs"

[dependencies]
# Discord/Async Runtime
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "cache",
    "standard_framework",
    "builder",
] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }

# Core functionality
rand = "0.9"
regex = "1.12"
anyhow = "1.0"
once_cell = "1.19"
getrandom = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
sysinfo = "0.36"

[profile.release]
# Optimizations for production builds
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Single codegen unit for better optimization
strip = true           # Strip debug symbols
